feat: massive us/ui enhancements, translation, font equalization
